# sad_rusty_bot

./: Cargo.toml
.github/workflows/: continuous-integration.yml  pkg-deb.yml
defaults/: sad_rusty_bot.env
pkg/common/: sad_rusty_bot.service
pkg/debian/: postinst  postrm
src/: main.rs
